# watermark_pdf

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
docs/doc/: __main__.rst  conf.py  index.rst  modules.rst  utils.rst
src/watermark_pdf/: __init__.py  __main__.py
src/watermark_pdf/config/: choix_destinataires_mock.xlsx
