[metadata]
name = watermark_pdf
version = 0.1.0
author = Matthieu Daviaud
author_email = matthieu.daviaud@gmail.com
description = Python package to watermark pdf files from a list of names.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src